--- a/src/ui/connectiondialog.ui
+++ b/src/ui/connectiondialog.ui
@@ -203,7 +203,7 @@
      <item row="8" column="0">
       <widget class="QLabel" name="certificate_dir_label">
        <property name="text">
-        <string>Certificate diectory:</string>
+        <string>Certificate directory:</string>
        </property>
       </widget>
      </item>
