--- a/src/ui/optionsdialog.ui
+++ b/src/ui/optionsdialog.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>HexEdit - Options</string>
+   <string>Options</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
@@ -47,7 +47,7 @@
    <item>
     <widget class="QGroupBox" name="gbHexEdit">
      <property name="title">
-      <string>HexEdit</string>
+      <string>HexEdit defaults</string>
      </property>
      <layout class="QVBoxLayout" name="verticalLayout_3">
       <item>
