--- a/src/ui/dialogs/optionsdialog.ui
+++ b/src/ui/dialogs/optionsdialog.ui
@@ -129,6 +129,9 @@
    </item>
    <item>
     <widget class="QDialogButtonBox" name="buttonBox">
+     <property name="focusPolicy">
+      <enum>Qt::StrongFocus</enum>
+     </property>
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
      </property>
@@ -141,6 +144,10 @@
  </widget>
  <tabstops>
   <tabstop>buttonBox</tabstop>
+  <tabstop>colorsBox</tabstop>
+  <tabstop>hexColumnsSpinBox</tabstop>
+  <tabstop>hexColumnsAutoCheckBox</tabstop>
+  <tabstop>resetToDefaultsButton</tabstop>
  </tabstops>
  <resources/>
  <connections>
