--- a/resources/veles.qrc
+++ b/resources/veles.qrc
@@ -46,5 +46,6 @@
         <file>images/connection_not_connected.png</file>
         <file>images/connection_alarm.png</file>
         <file>images/clients.png</file>
+        <file>style.qss</file>
     </qresource>
 </RCC>
