--- a/resources/style.qss
+++ b/resources/style.qss
@@ -59,3 +59,54 @@ veles--ui--disasm--Widget QLabel[highlight="true"] {
 veles--ui--disasm--Widget QLabel:focus {
    background-color: #111;
  }
+
+/* TabBar */
+
+veles--ui--MainWindowWithDetachableDockWidgets QTabBar >{
+  border: none;
+  background-color: palette(window);
+  outline: none;
+}
+
+veles--ui--MainWindowWithDetachableDockWidgets QTabBar::tab:selected > {
+
+  background-color: #3498DB;
+}
+
+
+veles--ui--MainWindowWithDetachableDockWidgets QTabBar::tab >{
+  border-top-left-radius: 0px;
+  border-top-right-radius: 0px;
+  /*max-height: 10 px;*/
+  padding: 2px;
+}
+
+veles--ui--DockWidget[active_dock="true"]::title {
+  background : palette(highlight);
+  color : palette(highlighted-text);
+}
+/*
+
+"QTabBar::tab {"
+"background : palette(window);"
+"color : palette(window-text);"
+"border-top-left-radius: 4px;"
+"border-top-right-radius: 4px;"
+"border: 1px solid palette(shadow);"
+"padding: 4px;"
+"}"
+"QTabBar::tab:selected {"
+"border-bottom: 0px solid palette(shadow);"
+"}"
+"QTabBar::tab:!selected {"
+"margin-top: 2px;"
+"}"
+
+"QTabBar::tab:selected {"
+"background : palette(highlight);"
+"color : palette(highlighted-text);"
+"border-bottom: 0px solid palette(shadow);"
+"}"
+
+
+*/
